--- a/src/modules/mavlink/module.yaml
+++ b/src/modules/mavlink/module.yaml
@@ -8,6 +8,10 @@ serial_config:
         then
             set MAV_ARGS "${MAV_ARGS} -f"
         fi
+        if param compare MAV_${i}_SW_FLOWCTL 1
+        then
+            set MAV_ARGS "${MAV_ARGS} -s"
+        fi
         mavlink start -d ${SERIAL_DEV} ${MAV_ARGS} -x
       port_config_param:
         name: MAV_${i}_CONFIG
@@ -78,3 +82,16 @@ parameters:
             num_instances: *max_num_config_instances
             default: [true, false, false]
 
+        MAV_${i}_SW_FLOWCTL:
+            description:
+                short: Enable software flow-control for instance ${i}
+                long: |
+                    If enabled, MAVLink messages will be throttled according to
+                    `txbuf` field reported by radio_status.
+
+                    Requires a radio to send the mavlink message RADIO_STATUS.
+
+            type: boolean
+            reboot_required: true
+            num_instances: *max_num_config_instances
+            default: [false, false, false]
